--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>EdYoda | Frontend Assessment</title>
+    <title>EdYoda | Frontend Assessment - Tanupam</title>
   </head>
   <body>
     <div id="root"></div>
